postgres/svc.yaml
---
# Source: postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: database
  name: my-psql
  labels:
    app.kubernetes.io/name: postgresql
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    role: primary
